<resources>
    <string name="app_name">V.I.V.A</string>
    <string name="app_name_splash_screen_display">V.I.V.A</string>
    <string name="splash_screen_anim_v">V</string>
    <string name="splash_screen_anim_very">ery</string>
    <string name="splash_screen_anim_intelligent">ntelligent</string>
    <string name="splash_screen_anim_virtual">irtual</string>
    <string name="splash_screen_anim_i">I</string>
    <string name="splash_screen_anim_a">A</string>
    <string name="splash_screen_anim_assistant">ssistant</string>
    <string name="alchemy_api">Text Analysis by AlchemyAPI<br /><a hrewf="www.alchemyapi.com" /></string>
    <!-- Dashboard -->
    <string name="dashboard_welcome_message">
        "Hi there.. My name is VIVA and I'm your personal digital assistant application.\n"

        "I am capable of handling voice calls and can act as a voice recorder. I can read and write messages and emails.\n"

        "I can also setup alarms, take voice notes, remind you of certain things. I can monitor your health and can suggest improvements based on your choices.\n"

        "I am your friend and will be available for you both offline and online."</string>
    <string name="title_activity_dashboard">V.I.V.A Dashboard</string>
    <string name="title_activity_setup">Setup</string>
    <string name="action_settings">Settings</string>
    <string name="dashboard_battery_percentage">50</string>
    <string name="dashboard_commands">Commands</string>
    <string name="dashboard_viva_heard">Interaction:</string>
    <string name="viva_listening">Listening&#8230;</string>

    <!-- Put your own APP ID here -->
    <string name="open_weather_maps_app_id">bd94b677e4673cb6a0fc398cc824325d</string>

    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>

    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>

    <string name="place_not_found">Sorry, no weather data found.</string>

    <string name="alchemy_api_key">ff2b59aa078f19872a8e218b0f50f4192b9bacc6</string>

    <string name="dashboard_wifi">WI-FI</string>
    <string-array name="dashboard_camera_option">
        <item>Pick from gallery</item>
        <item>Camera</item>
    </string-array>
    <string name="add_widget">Add widget</string>
</resources>
